--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
    <center>
     <br>ExtraSauceStudio
-    <img src="logo-extrasaucestudio.png" alt="Extra Sauce Studio" width="500" height="600">
+    <img src="logo-extrasaucestudio.png" alt="Extra Sauce Studio" height="25%">
    </center>
 
 </body>
