--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
    <center>
     <br>ExtraSauceStudio
-    <img src="images/logo-extrasaucestudio.png" alt="Extra Sauce Studio" height="5%">
+    <img src="images/logo-extrasaucestudio.png" alt="Extra Sauce Studio" width="10%">
    </center>
 
 </body>
