--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
    <center>
     <br><br><br><br><br><br>
     <img src="images/logo-extrasaucestudio.png" alt="Extra Sauce Studio" width="40%">
+    Extra Sauce Studio<br>
+    Quebec enterprise number: (NEQ) 2277160562 Extra Sauce Studio 21 rue de la pointe, saint-alphonse-rodriguez, J0K 1W0, Quebec, Canada
    </center>
 
 </body>
