--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <body>
    <center>
     <br><br><br><br><br><br>
-    <img src="images/logo-extrasaucestudio.png" alt="Extra Sauce Studio" width="40%"><br>
-    Quebec enterprise number: (NEQ) 2277160562 Extra Sauce Studio 21 rue de la pointe, saint-alphonse-rodriguez, J0K 1W0, Quebec, Canada
+    <img src="images/logo-extrasaucestudio.png" alt="Extra Sauce Studio" width="40%">
    </center>
 
 </body>
